// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ansible component should render correctly supported boolean 1`] = `
<div>
  <i
    aria-label="Has Ansible support"
    class="Ansible is-supported"
    widget-type="InsightsAnsibleSupport"
  >
    <svg
      id="Layer_1"
      style="enable-background: new 0 0 2032 2027.2;"
      version="1.1"
      viewBox="0 0 2032 2027.2"
      x="0px"
      y="0px"
    >
      <path
        class="st0"
        d="M2030.8,1014.8c0,559.2-453.3,1012.4-1012.4,1012.4C459.2,2027.2,5.9,1574,5.9,1014.8
                    C5.9,455.7,459.2,2.4,1018.3,2.4C1577.5,2.4,2030.8,455.7,2030.8,1014.8 M1035.4,620.9l262,646.6L901.7,955.8L1035.4,620.9
                    L1035.4,620.9z M1500.8,1416.5l-403-969.9c-11.5-28-34.5-42.8-62.4-42.8c-28,0-52.7,14.8-64.2,42.8L528.9,1510.4h151.3l175.1-438.6
                    l522.5,422.1c21,17,36.2,24.7,55.9,24.7c39.5,0,74-29.6,74-72.3C1507.7,1439.4,1505.3,1428.3,1500.8,1416.5L1500.8,1416.5z"
      />
    </svg>
  </i>
</div>
`;

exports[`Ansible component should render correctly supported number 1`] = `
<div>
  <i
    aria-label="Has Ansible support"
    class="Ansible is-supported"
    widget-type="InsightsAnsibleSupport"
  >
    <svg
      id="Layer_1"
      style="enable-background: new 0 0 2032 2027.2;"
      version="1.1"
      viewBox="0 0 2032 2027.2"
      x="0px"
      y="0px"
    >
      <path
        class="st0"
        d="M2030.8,1014.8c0,559.2-453.3,1012.4-1012.4,1012.4C459.2,2027.2,5.9,1574,5.9,1014.8
                    C5.9,455.7,459.2,2.4,1018.3,2.4C1577.5,2.4,2030.8,455.7,2030.8,1014.8 M1035.4,620.9l262,646.6L901.7,955.8L1035.4,620.9
                    L1035.4,620.9z M1500.8,1416.5l-403-969.9c-11.5-28-34.5-42.8-62.4-42.8c-28,0-52.7,14.8-64.2,42.8L528.9,1510.4h151.3l175.1-438.6
                    l522.5,422.1c21,17,36.2,24.7,55.9,24.7c39.5,0,74-29.6,74-72.3C1507.7,1439.4,1505.3,1428.3,1500.8,1416.5L1500.8,1416.5z"
      />
    </svg>
  </i>
</div>
`;

exports[`Ansible component should render correctly unsupported boolean 1`] = `
<div>
  <i
    aria-label="Does not have Ansible support"
    class="Ansible is-unsupported"
    disabled=""
    widget-type="InsightsAnsibleSupport"
  >
    <svg
      id="Layer_1"
      style="enable-background: new 0 0 2032 2027.2;"
      version="1.1"
      viewBox="0 0 2032 2027.2"
      x="0px"
      y="0px"
    >
      <path
        class="st0"
        d="M2030.8,1014.8c0,559.2-453.3,1012.4-1012.4,1012.4C459.2,2027.2,5.9,1574,5.9,1014.8
                    C5.9,455.7,459.2,2.4,1018.3,2.4C1577.5,2.4,2030.8,455.7,2030.8,1014.8 M1035.4,620.9l262,646.6L901.7,955.8L1035.4,620.9
                    L1035.4,620.9z M1500.8,1416.5l-403-969.9c-11.5-28-34.5-42.8-62.4-42.8c-28,0-52.7,14.8-64.2,42.8L528.9,1510.4h151.3l175.1-438.6
                    l522.5,422.1c21,17,36.2,24.7,55.9,24.7c39.5,0,74-29.6,74-72.3C1507.7,1439.4,1505.3,1428.3,1500.8,1416.5L1500.8,1416.5z"
      />
      <rect
        class="st0"
        height="221.5"
        transform="matrix(-0.7071 0.7071 -0.7071 -0.7071 3082.5815 -510.474)"
        width="803.8"
        x="1245.1"
        y="272.4"
      />
      <rect
        class="st1"
        height="221.5"
        transform="matrix(-0.7071 0.7071 -0.7071 -0.7071 2450.9683 1014.3757)"
        width="2590.2"
        x="-279.7"
        y="904"
      />
      <rect
        class="st0"
        height="221.5"
        transform="matrix(-0.7071 0.7071 -0.7071 -0.7071 1734.4641 2744.1697)"
        width="563.7"
        x="17.1"
        y="1620.5"
      />
    </svg>
  </i>
</div>
`;

exports[`Ansible component should render correctly unsupported number 1`] = `
<div>
  <i
    aria-label="Does not have Ansible support"
    class="Ansible is-unsupported"
    disabled=""
    widget-type="InsightsAnsibleSupport"
  >
    <svg
      id="Layer_1"
      style="enable-background: new 0 0 2032 2027.2;"
      version="1.1"
      viewBox="0 0 2032 2027.2"
      x="0px"
      y="0px"
    >
      <path
        class="st0"
        d="M2030.8,1014.8c0,559.2-453.3,1012.4-1012.4,1012.4C459.2,2027.2,5.9,1574,5.9,1014.8
                    C5.9,455.7,459.2,2.4,1018.3,2.4C1577.5,2.4,2030.8,455.7,2030.8,1014.8 M1035.4,620.9l262,646.6L901.7,955.8L1035.4,620.9
                    L1035.4,620.9z M1500.8,1416.5l-403-969.9c-11.5-28-34.5-42.8-62.4-42.8c-28,0-52.7,14.8-64.2,42.8L528.9,1510.4h151.3l175.1-438.6
                    l522.5,422.1c21,17,36.2,24.7,55.9,24.7c39.5,0,74-29.6,74-72.3C1507.7,1439.4,1505.3,1428.3,1500.8,1416.5L1500.8,1416.5z"
      />
      <rect
        class="st0"
        height="221.5"
        transform="matrix(-0.7071 0.7071 -0.7071 -0.7071 3082.5815 -510.474)"
        width="803.8"
        x="1245.1"
        y="272.4"
      />
      <rect
        class="st1"
        height="221.5"
        transform="matrix(-0.7071 0.7071 -0.7071 -0.7071 2450.9683 1014.3757)"
        width="2590.2"
        x="-279.7"
        y="904"
      />
      <rect
        class="st0"
        height="221.5"
        transform="matrix(-0.7071 0.7071 -0.7071 -0.7071 1734.4641 2744.1697)"
        width="563.7"
        x="17.1"
        y="1620.5"
      />
    </svg>
  </i>
</div>
`;
